PSQLADM-401 Convert to Markdown (2.3.2)
A  docs/configuring.md
A  docs/index.md
A  docs/install-v2.md
A  docs/installing-tarball.md
A  docs/proxysql-changes.md
A  docs/proxysql-v1.md
A  docs/psa-build.md
A  docs/psa-config.md
A  docs/psa-intro.md
A  docs/psa-known-limitations.md
A  docs/psa-options.md
A  docs/psa-ref.md
A  docs/psa-scheduler.md
A  docs/psql-functions.md
A  docs/psql-process.md
A  docs/release-notes-1.4.12.md
A  docs/release-notes-1.4.16.md
A  docs/release-notes-1.4.4.md
A  docs/release-notes-1.4.5.md
A  docs/release-notes-1.4.6.md
A  docs/release-notes-1.4.7.md
A  docs/release-notes-1.4.8.md
A  docs/release-notes-2.0.12.md
A  docs/release-notes-2.0.13.md
A  docs/release-notes-2.0.14.md
A  docs/release-notes-2.0.15.md
A  docs/release-notes-2.0.17.md
A  docs/release-notes-2.0.18.md
A  docs/release-notes-2.0.3.md
A  docs/release-notes-2.0.4.md
A  docs/release-notes-2.0.5.md
A  docs/release-notes-2.0.6.md
A  docs/release-notes-2.0.7.md
A  docs/release-notes-2.1.1.md
A  docs/release-notes-2.2.0.md
A  docs/release-notes-2.3.2-1.md
A  docs/release-notes-2.3.2.md
A  docs/release-notes.md
A  docs/tarball-v1.md
A  docs/uninstall-psql.md
A  docs/upgrade-psql.md
A  docs/v2-config.md

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
+Markdown
+mkdocs
+mkdocs-exclude
+mkdocs-git-revision-date-plugin
+mkdocs-htmlproofer-plugin
+mkdocs-include
+mkdocs-macros-plugin
+mkdocs-material
+mkdocs-material-extensions
+mkdocs-section-index
+mkdocs-versioning
 sphinx-autobuild==2020.9.1
 sphinx-copybutton
 sphinx-markdown-builder
