--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -7,7 +7,7 @@ copyright: Percona LLC, &#169; 2022
 site_url: ""
 repo_name: percona/proxysql-admin-tool-doc
 repo_url: https://github.com/percona/proxysql-admin-tool-doc
-edit_uri: edit/docs/
+edit_uri: edit/main/docs/
 
 #features:
 # - content.tabs.link
