--- a/mkdocs-percona.yml
+++ b/mkdocs-percona.yml
@@ -1,8 +1,17 @@
 INHERIT: mkdocs-base.yml
 
-site_url: 'https://percona.com/doc/proxysql-admin-tool-doc/'
+site_url: "https://docs.percona.com/proxysql/index.html"
 
 theme:
   name: material
   custom_dir: _resource/theme
 
+extra_css:
+  - css/version-select.css
+  - css/toctree.css
+  - css/percona.css
+  - css/details.css
+
+extra: # Used in main.html template and can't be externalized
+    edit_page_text: '<i class="uil uil-pen"></i> <b>Edit this page</b>'
+    updated_text: '<i class="uil uil-refresh"></i> Page updated'
