--- a/requirements.txt
+++ b/requirements.txt
@@ -9,15 +9,7 @@ mkdocs-material
 mkdocs-material-extensions
 mkdocs-section-index
 mkdocs-versioning
-sphinx-autobuild==2020.9.1
-sphinx-copybutton
-sphinx-markdown-builder
-sphinx-material @ git+https://github.com/bashtage/sphinx-material.git@3c3d1533a8ef09dad6987e06fc5375867c18c529
-sphinxcontrib-applehelp
-sphinxcontrib-devhelp
-sphinxcontrib-htmlhelp
-sphinx-gitstamp
-sphinxcontrib-jsmath
-sphinxcontrib-qthelp
-sphinxcontrib-serializinghtml
+mkdocs-bootstrap-tables-plugin
+mike
+
 
