PSQLADM-403 Implement 404 page for docs new file:   _resource/overrides/404.html 	modified:   mkdocs-base.yml 	modified:   mkdocs.yml

--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -19,6 +19,7 @@ theme:
   name: material
   logo: _images/percona-logo.svg
   favicon: _images/percona-favicon.ico
+  custom_dir: _resources/overrides/
   palette:
 
     # Light mode
@@ -35,6 +36,12 @@ theme:
         icon: material/toggle-switch
         name: Switch to light mode
 
+# Theme features
+
+  features:
+    - search.highlight
+    - navigation.top
+    - content.tabs.link
 
 extra_css:
   - https://unicons.iconscout.com/release/v3.0.3/css/line.css
@@ -61,7 +68,7 @@ markdown_extensions:
   pymdownx.mark: {}
   pymdownx.smartsymbols: {}
   pymdownx.tabbed:
-      alternate_style: true
+      {alternate_style: true}
   pymdownx.tilde: {}
   pymdownx.superfences: {}
   pymdownx.highlight:
