--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -87,9 +87,9 @@ plugins:
 #      glob:
 #         - file.md
 #    with-pdf: # https://github.com/orzih/mkdocs-with-pdf
-#          output_path: '_pdf/PerconaDistributionPostgreSQL-13.pdf'
-#          cover_title: 'Percona Distribution for PostgreSQL Documentation'
-#          cover_subtitle: 13.7 (May 16, 2022)
+#          output_path: '_pdf/PerconaProxySQLAdmintool-2.4.4.pdf'
+#          cover_title: 'Percona ProxySQL Admin tool Documentation'
+#          cover_subtitle: 2.4.4 (October 04, 2022)
 #          author: 'Percona Technical Documentation Team'
 #          cover_logo: docs/_images/postgre-logo.jpg
 #          debug_html: false
@@ -158,4 +158,5 @@ nav:
       - release-notes-2.3.2-1.md
       - 2.4.2.md
       - 2.4.3.md
+      - 2.4.4.md
 # - Version Selector: "../"
