PSQLADM-426 Provide instructions to install Percona Scheduler from a Percona respository
MM docs/install-v2.md
M  docs/uninstall-psql.md
M  docs/upgrade-psql.md

--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -113,6 +113,7 @@ nav:
       - tarball-v1.md
       - configuring.md
   - Install ProxySQL 2.x.x and admin tools:
+      - where-to-download-proxysql.md
       - install-v2.md
       - installing-tarball.md
       - psa-build.md
