--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -89,7 +89,7 @@ plugins:
 #    with-pdf: # https://github.com/orzih/mkdocs-with-pdf
 #          output_path: '_pdf/PerconaProxySQLAdmintool-2.4.4.pdf'
 #          cover_title: 'Percona ProxySQL Admin tool Documentation'
-#          cover_subtitle: 2.4.4 (October 04, 2022)
+#          cover_subtitle:
 #          author: 'Percona Technical Documentation Team'
 #          cover_logo: docs/_images/postgre-logo.jpg
 #          debug_html: false
@@ -133,6 +133,7 @@ nav:
       - percona-scheduler-admin-known-limitations.md
   - Release Notes:
       - release-notes.md
+      - 2.4.4-1.2.md
       - 2.4.4.md
       - 2.4.3.md
       - 2.4.2.md
