--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
 Markdown
 mkdocs
-mkdocs-exclude
-mkdocs-git-revision-date-plugin
-mkdocs-htmlproofer-plugin
-mkdocs-include
-mkdocs-macros-plugin
-mkdocs-material
-mkdocs-material-extensions
-mkdocs-section-index
 mkdocs-versioning
+mkdocs-macros-plugin
+mkdocs-exclude
+markdown-include
+mkdocs-material
+mkdocs-with-pdf
+mkdocs-git-revision-date-plugin
+mkdocs-material-extensions
 mkdocs-bootstrap-tables-plugin
+mkdocs-section-index
+mkdocs-htmlproofer-plugin
 mike
-
-
