--- a/mkdocs-percona.yml
+++ b/mkdocs-percona.yml
@@ -8,10 +8,9 @@ plugins:
 
 theme:
   name: material
-  custom_dir: _resource/theme
+  custom_dir: _resource/overrides
 
 extra_css:
-  - css/version-select.css
   - css/toctree.css
   - css/percona.css
   - css/details.css
