PSQLADM-449 Test snippets
modified:   docs/install-v2.md

--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -77,7 +77,8 @@ markdown_extensions:
   pymdownx.highlight:
       linenums: false
   pymdownx.inlinehilite: {}
-  pymdownx.snippets: {}
+  pymdownx.snippets:
+      {url_download: true}
   pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
