--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,10 @@ theme:
     - search.highlight
     - navigation.top
     - navigation.tracking 
-    - content.tabs.link   
+    - content.tabs.link
+    - content.action.edit
+    - content.action.view
+    - content.code.copy      
 
 #Google Analytics configuration 
 extra:
