--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -21,7 +21,7 @@ theme:
   favicon: _images/percona-favicon.ico
   custom_dir: _resources/overrides/
   font:
-    text: Chivo, Colfax, Franziska
+    text: Poppins
   palette:
 
     # Light mode
@@ -102,7 +102,7 @@ plugins:
 #          cover_title: 'Percona ProxySQL Admin tool Documentation'
 #          cover_subtitle:
 #          author: 'Percona Technical Documentation Team'
-#          cover_logo: docs/_images/postgre-logo.jpg
+#          cover_logo: docs/_static/Percona_Logo_Color.png
 #          debug_html: false
 #          custom_template_path: _resource/templates
 #          enabled_if_env: ENABLE_PDF_EXPORT
@@ -115,6 +115,16 @@ plugins:
 extra:
   version:
     provider: mike
+  homepage:
+    https://docs.percona.com
+  consent:
+    title: Cookie consent
+    description: >- 
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
+
 
 nav:
   - Home: index.md
