--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -90,6 +90,12 @@ plugins:
     search: 
       separator: '[\s\-,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
     git-revision-date: {}
+    meta-descriptions:
+      export_csv: false
+      quiet: false
+      enable_checks: false
+      min_length: 50
+      max_length: 160
 #  - htmlproofer # Uncomment to check links - but extends build time significantly
     macros:
         include_yaml:
