--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -129,8 +129,7 @@ extra:
       We use cookies to recognize your repeated visits and preferences, as well
       as to measure the effectiveness of our documentation and whether users
       find what they're searching for. With your consent, you're helping us to
-      make our documentation better.
-
+      make our documentation better. Read more about <a class="reference external" href="https://www.percona.com/20180524-cookie-policy" target="_blank">Percona Cookie Policy</a>.
 
 nav:
   - Home: index.md
@@ -192,4 +191,6 @@ nav:
       - release-notes-1.4.6.md
       - release-notes-1.4.5.md
       - release-notes-1.4.4.md
+  - trademark-policy.md
+  - copyright-and-licensing-information.md
 # - Version Selector: "../"
