--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -133,34 +133,7 @@ extra:
 
 nav:
   - Home: index.md
-  - ProxySQL 1.x.x and the proxysql-admin:
-      - proxysql-v1.md
-      - installing-v1.md
-      - tarball-v1.md
-      - configure-proxysql1.md
-  - ProxySQL 2.x.x and admin tools:
-      - Install:
-        - where-to-download-proxysql.md
-        - install-v2.md
-        - install-proxysql2-tarball.md
-        - build-psh.md
-      - Deploy:
-        - start-or-stop-proxysql2.md
-        - upgrade-proxysql2.md
-        - uninstall-proxysql2.md
-      - proxysql-admin:
-        - Manage:
-          - proxysql-admin-tool-changes.md
-          - proxysql-admin-tool-v2-config.md
-          - proxysql-admin-tool-functions.md
-      - pxc_scheduler_handler:
-        - Manage:
-          - psh-overview.md
-          - psh-configuration.md
-          - psh-options.md
-          - psh-detailed-options.md
-          - psh-known-limitations.md
-  - Release notes:
+   - Release notes:
       - Release notes index: release-notes.md
       - 2.5.2.md
       - 2.5.1.md
@@ -192,6 +165,35 @@ nav:
       - release-notes-1.4.6.md
       - release-notes-1.4.5.md
       - release-notes-1.4.4.md
-  - trademark-policy.md
-  - copyright-and-licensing-information.md
+  - ProxySQL 1.x.x and the proxysql-admin:
+      - proxysql-v1.md
+      - installing-v1.md
+      - tarball-v1.md
+      - configure-proxysql1.md
+  - ProxySQL 2.x.x and admin tools:
+      - Install:
+        - where-to-download-proxysql.md
+        - install-v2.md
+        - install-proxysql2-tarball.md
+        - build-psh.md
+      - Deploy:
+        - start-or-stop-proxysql2.md
+        - upgrade-proxysql2.md
+        - uninstall-proxysql2.md
+      - proxysql-admin:
+        - Manage:
+          - proxysql-admin-tool-changes.md
+          - proxysql-admin-tool-v2-config.md
+          - proxysql-admin-tool-functions.md
+      - pxc_scheduler_handler:
+        - Manage:
+          - psh-overview.md
+          - psh-configuration.md
+          - psh-options.md
+          - psh-detailed-options.md
+          - psh-known-limitations.md
+  - Reference:
+      - trademark-policy.md
+      - copyright-and-licensing-information.md
+      
 # - Version Selector: "../"
