--- a/variables.yml
+++ b/variables.yml
@@ -1,6 +1,6 @@
 # variables for HTML output
 
-release: '2.5.5'
+release: '2.5.5-1.2'
 version: '2.x.x'
-release_date: 'August 23, 2023'
-title_date: '2023-08-23'
+release_date: 'February 26, 2024'
+title_date: '2024-02-26'
