--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -20,7 +20,12 @@ theme:
   favicon: _images/percona-favicon.ico
   custom_dir: _resources/overrides/
   font:
-    text: Poppins
+    text: Roboto
+    code: Roboto Mono
+  icon:
+    edit: material/file-edit-outline
+    view: material/file-eye-outline
+
   palette:
 
     # Light mode
@@ -52,6 +57,8 @@ extra_css:
   - https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css
   - css/percona.css
   - css/nocopy.css
+  - css/osano.css
+  - css/design.css
 
 #Copyright
 copyright: >
@@ -59,20 +66,22 @@ copyright: >
 
 extra_javascript:
   - js/promptremover.js
+  - js/consent.js
 
 markdown_extensions:
   attr_list: {}
   toc:
-    permalink: True
+    permalink: true
     title: On this page
+    toc_depth: 3
+  md_in_html: {}
   admonition: {}
   footnotes: {}
   def_list: {} # https://michelf.ca/projects/php-markdown/extra/#def-list
   meta: {}
   md_in_html: {}
   smarty:
-      {smart_angled_quotes: true,
-       smart_dashes: false}
+      {smart_angled_quotes: true}
   pymdownx.details: {}
   pymdownx.mark: {}
   pymdownx.smartsymbols: {}
@@ -80,14 +89,22 @@ markdown_extensions:
       {alternate_style: true}
   pymdownx.tilde: {}
   pymdownx.superfences: {}
+  pymdownx.tabbed:
+    alternate_style: true
+  pymdownx.tasklist:
+    custom_checkbox: true
+  pymdownx.snippets:
+      base_path: ["snippets"]
+      auto_append:
+        - services-banner.md
   pymdownx.highlight:
-      linenums: false
-  pymdownx.inlinehilite: {}
-  pymdownx.snippets: {}
+    use_pygments: true
   pymdownx.emoji:
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg
-
+    emoji_index: !!python/name:material.extensions.emoji.twemoji
+    emoji_generator: !!python/name:material.extensions.emoji.to_svg
+    options:
+      custom_icons:
+        - _resource/.icons
 
 plugins:
     search:
@@ -126,13 +143,6 @@ extra:
     provider: mike
   homepage:
     https://docs.percona.com
-  consent:
-    title: Cookie consent
-    description: >-
-      We use cookies to recognize your repeated visits and preferences, as well
-      as to measure the effectiveness of our documentation and whether users
-      find what they're searching for. With your consent, you're helping us to
-      make our documentation better. Read more about <a class="reference external" href="https://www.percona.com/20180524-cookie-policy" target="_blank">Percona Cookie Policy</a>.
 
 nav:
   - Home: index.md
