--- a/variables.yml
+++ b/variables.yml
@@ -1,6 +1,6 @@
 # variables for HTML output
 
-release: "2.6.3"
+release: "2.6.4"
 version: "2.x.x"
-release_date: "June 11, 2024"
-title_date: "2024-06-11"
+release_date: "September  2024"
+title_date: "2024-09-"
