--- a/variables.yml
+++ b/variables.yml
@@ -1,6 +1,6 @@
 # variables for HTML output
 
-release: "2.7.0"
+release: "2.6.5"
 version: "2.x.x"
-release_date: "September , 2024"
-title_date: "2024-09-"
+release_date: "September 12, 2024"
+title_date: "2024-09-12"
