--- a/variables.yml
+++ b/variables.yml
@@ -2,5 +2,5 @@
 
 release: "2.7.1"
 version: "2.x.x"
-release_date: "October , 2024"
-title_date: "2024-09-"
+release_date: "October 28, 2024"
+title_date: "2024-10-28"
