--- a/variables.yml
+++ b/variables.yml
@@ -1,6 +1,6 @@
 # variables for HTML output
 
-release: "2.7.1"
+release: "2.7.1-1"
 version: "2.x.x"
-release_date: "October 28, 2024"
-title_date: "2024-10-28"
+release_date: "November 20, 2024"
+title_date: "2024-11-"
