--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -145,7 +145,7 @@ extra:
 nav:
   - Home: index.md
   - get-help.md
-  - ProxySQL 2.x.x Release notes:
+  - Release notes:
       - Release notes index: release-notes.md
       - 2.7.1-1.md
       - 2.7.1.md
@@ -165,21 +165,8 @@ nav:
       - 2.4.3.md
       - 2.4.2.md
       - release-notes-2.3.2-1.md
-      - release-notes-2.3.2.md
-      - release-notes-2.2.0.md
-      - release-notes-2.1.1.md
-      - release-notes-2.0.18.md
-      - release-notes-2.0.17.md
-      - release-notes-2.0.15.md
-      - release-notes-2.0.14.md
-      - release-notes-2.0.13.md
-      - release-notes-2.0.12.md
-      - release-notes-2.0.7.md
-      - release-notes-2.0.6.md
-      - release-notes-2.0.5.md
-      - release-notes-2.0.4.md
-      - release-notes-2.0.3.md
-  - ProxySQL 2.x.x and admin tools:
+      - release-notes-2.3.2-later.md
+  - ProxySQL and admin tools:
       - Install:
         - where-to-download-proxysql.md
         - install-v2.md
@@ -201,12 +188,6 @@ nav:
           - psh-options.md
           - psh-detailed-options.md
           - psh-known-limitations.md
-  - ProxySQL 1.x.x and the proxysql-admin:
-      - proxysql-v1.md
-      - Release notes for ProxySQL 1.x.x: release-notes-index-v1.md
-      - installing-v1.md
-      - tarball-v1.md
-      - configure-proxysql1.md
   - Reference:
       - trademark-policy.md
       - copyright-and-licensing-information.md
