--- a/variables.yml
+++ b/variables.yml
@@ -1,6 +1,6 @@
 # variables for HTML output
 
-release: "2.7.1-1"
+release: "2.7.3"
 version: "2.x.x"
-release_date: "November 20, 2024"
-title_date: "2024-11-"
+release_date: "April , 2025"
+title_date: "2025-04-"
