PSQLADM-570 [DOCS] - Remove 2.x from the titles in preparation of 3.x release
	modified:   docs/index.md
	modified:   docs/install-proxysql2-tarball.md
	modified:   docs/install-v2.md
	modified:   docs/proxysql-admin-tool-changes.md
	modified:   docs/proxysql-admin-tool-v2-config.md
	modified:   docs/psh-detailed-options.md
	modified:   docs/psh-overview.md
	modified:   docs/start-or-stop-proxysql2.md
	modified:   docs/uninstall-proxysql2.md
	modified:   docs/upgrade-proxysql2.md
	modified:   docs/where-to-download-proxysql.md

--- a/variables.yml
+++ b/variables.yml
@@ -1,6 +1,6 @@
 # variables for HTML output
 
-release: "2.7.3"
-version: "2.x.x"
-release_date: "April , 2025"
-title_date: "2025-04-"
+release: "3.0.1"
+version: "3.x"
+release_date: "June 12, 2025"
+title_date: "2025-06-"
