PSQLADM-566 - Release notes for ProxySQL - PSQLADM 3.0.1
	new file:   docs/3.0.1.md
	modified:   docs/release-notes.md
	modified:   mkdocs-base.yml
	modified:   variables.yml

--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -144,9 +144,12 @@ extra:
 
 nav:
   - Home: index.md
+  - limitations.md
   - get-help.md
   - Release notes:
       - Release notes index: release-notes.md
+      
+      - 3.0.1.md
       - 2.7.3.md
       - 2.7.1-1.md
       - 2.7.1.md
