--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -51,7 +51,7 @@ theme:
     - search.highlight
     - navigation.top
     - content.tabs.link
-    - content.action.edit
+#    - content.action.edit
     - content.action.view
     - content.code.copy
 
@@ -73,7 +73,7 @@ markdown_extensions:
   toc:
     permalink: true
     title: On this page
-    toc_depth: 3
+    toc_depth: 2
   md_in_html: {}
   admonition: {}
   footnotes: {}
