[DOCS]  Implement the feedback form and GH contributors plugin 	modified:   _resource/overrides/main.html 	new file:   _resource/overrides/partials/rating.html 	new file:   docs/css/rating.css 	new file:   docs/js/rating.js 	modified:   mkdocs-base.yml 	modified:   mkdocs.yml 	modified:   requirements.txt

--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -63,10 +63,12 @@ extra_css:
   - css/extra.css
   - css/nocopy.css
   - css/mysql.css
+  - css/rating.css
 
 extra_javascript:
   - js/promptremover.js
   - js/consent.js
+  - js/rating.js
 
 markdown_extensions:
   attr_list: {}
@@ -109,7 +111,13 @@ markdown_extensions:
 plugins:
     search:
       separator: '[\s\-,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
-    git-revision-date: {}
+    git-revision-date-localized:
+      enable_creation_date: true
+      enabled: !ENV [ENABLED_GIT_REVISION_DATE, True]
+    git-committers:
+      enabled: !ENV [CI, false]
+      repository: percona/proxysql-admin-tool-doc
+      branch: "main"
     meta-descriptions:
       export_csv: false
       quiet: false
